fixed wrap words

--- a/frontend/src/widgets/Header/css/media.css
+++ b/frontend/src/widgets/Header/css/media.css
@@ -12,17 +12,21 @@
   .header-logo-wrapper {
     flex-basis: 0;
   }
-
-  .main-mav-web {
+	
+	.main-mav-web {
     display: flex;
     list-style: none;
   }
 
+  .main-nav-open {
+	  display: block;
+  }
+  
   .main-nav-login {
     display: none;
   }
-
-  .main-nav-item {
+  
+	.main-nav-item {
     margin: 0 10px;
     padding: 0 5px;
   }
@@ -42,8 +46,8 @@
   .main-nav-list {
     display: flex;
   }
-
-  .login {
+  
+	.login {
     display: block;
   }
 }
@@ -51,7 +55,7 @@
 @media screen and (min-width: 720px) {
   .main-nav-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 }
 
